--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -735,10 +735,12 @@ Only the behavioral results were reported here.
 \hypertarget{d-prime-2}{%
 \paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-2}}
 
-There was evidence for the interaction between identity and valence, \(F(2, 42) = 12.88\), \(\mathit{MSE} = 0.13\), \(p < .001\), \(\hat{\eta}^2_G = .041\).
+There was evidence for the interaction between identity and valence, \(F(2, 42) = 12.88\), \(\mathit{MSE} = 0.13\), \(p < .001\), \(\hat{\eta}^2_G = .041\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 29.31\), \(\mathit{MSE} = 0.12\), \(p < .001\), \(\hat{\eta}^2_G = .147\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.199) is better than both neutral-self (1.98, SE = 0.151), \emph{t}(21) = 5.984, \emph{p} \textless{} 0.001, and bad-self condition (2.07, SE = 0.154), \emph{t}(21) = 6.555, \emph{p} \textless{} 0.001. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -1.059, \emph{p} = 0.549. For other trials, there was no significant effect of valuence, \(F(2, 42) = 0.00\), \(\mathit{MSE} = 0.16\), \(p = .999\), \(\hat{\eta}^2_G = .000\).
 
 \hypertarget{rt}{%
 \paragraph{RT}\label{rt}}
+
+For the matched trials, there was interaction between identity and valence, \(F(1.72, 36.16) = 4.55\), \(\mathit{MSE} = 1,560.90\), \(p = .022\), \(\hat{\eta}^2_G = .015\). We split the self-relevant and other relevant trials separately. For the self condition, the valence effect is significant, \(F(1.92, 40.38) = 14.48\), \(\mathit{MSE} = 1,647.20\), \(p < .001\), \(\hat{\eta}^2_G = .112\). The Self-good (484, SE = 13.2) is faster than self-neutral (543, SE = 16.7) , \emph{t} = -4.521, \emph{p} = 0.0005, \emph{df} = 21 and self-bad condition (535, SE = 18.4), \emph{t} = -4.489, \emph{p} = 0.0006, \emph{df} = 21. but not significant different between neutral and bad condition, \emph{t} = 0.689, \emph{p} = 0.772, \emph{df} = 21. For other condition, there was no effect of valence, \(F(1.79, 37.5) = 1.04\), \(\mathit{MSE} = 1,842.07\), \(p = .356\), \(\hat{\eta}^2_G = .008\).
 
 \hypertarget{day-two}{%
 \subsubsection{Day two}\label{day-two}}
@@ -746,10 +748,12 @@ There was evidence for the interaction between identity and valence, \(F(2, 42) 
 \hypertarget{d-prime-3}{%
 \paragraph{\texorpdfstring{\emph{d} prime}{d prime}}\label{d-prime-3}}
 
-There was evidence for the interaction between identity and valence, \(F(2, 42) = 3.86\), \(\mathit{MSE} = 0.08\), \(p = .029\), \(\hat{\eta}^2_G = .005\).
+There was evidence for the interaction between identity and valence, \(F(2, 42) = 3.86\), \(\mathit{MSE} = 0.08\), \(p = .029\), \(\hat{\eta}^2_G = .005\). We further split the self- and other-relevant trials. For the self trials, there was significant effect of valence, \(F(2, 42) = 7.35\), \(\mathit{MSE} = 0.08\), \(p = .002\), \(\hat{\eta}^2_G = .021\). Post-hoc comparison showed that the good-self condition (2.71, SE = 0.214) is better than both neutral-self (2.43, SE = 0.175), \emph{t}(21) = 2.98, \emph{p} = 0.0189, and bad-self condition (2.43, SE = 0.199), \emph{t}(21) = 3.93, \emph{p} = 0.0021. But there was no significant difference between bad-self and neutral-self, \emph{t}(21) = -0.097, \emph{p} = 0.995. For other trials, there was no significant effect of valuence, \(F(2, 42) = 1.46\), \(\mathit{MSE} = 0.09\), \(p = .245\), \(\hat{\eta}^2_G = .004\).
 
 \hypertarget{rt-1}{%
 \paragraph{RT}\label{rt-1}}
+
+For the matched trials, the interaction between identity and valence, \(F(1.62, 34.1) = 3.04\), \(\mathit{MSE} = 978.35\), \(p = .071\), \(\hat{\eta}^2_G = .005\). As in previous studies, we splited the self- and other-relevant trials. For the self condition, the valence effect is significant, \(F(1.46, 30.76) = 6.57\), \(\mathit{MSE} = 1,007.62\), \(p = .008\), \(\hat{\eta}^2_G = .023\). The Self-good (480, SE = 16.9) is faster than self-neutral (504, SE = 17.3) , \emph{t} = -2.289, \emph{p} = 0.0795, \emph{df} = 21 and self-bad condition (508, SE = 17.9), \emph{t} = -4.342, \emph{p} = 0.0008, \emph{df} = 21. but not significant different between neutral and bad condition, \emph{t} = -0.503, \emph{p} = 0.871, \emph{df} = 21. For other condition, there was no effect of valence, \(F(1.91, 40.04) = 1.75\), \(\mathit{MSE} = 1,070.90\), \(p = .188\), \(\hat{\eta}^2_G = .007\).
 
 \newpage
 
