add generalization exp as exp5, change eeg exps as exp6

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -642,10 +642,10 @@ For non-matched trials, there was no significant effect. Idneity (\(F(1, 44) = 1
 
 In experiment 4, we manipulated the task so that the moral valence (experiment 4a) or the self-relatedness (experiment 4b) become irrelevant to the task. We found a robust effect of the task: when the self-relatedness is task related, the results showed a strong effect of self-relatedness; in contrast, when moral valence become task related the main effect of moral valence was strong. However, the task irrelevant stimuli in the shape exerted influence on the performance as well. The good self conditions (the shape associated the self and with a \enquote{good person} within the shape) performed better than bad self conditions. These results demonstrated that even when the moral valence and self-reference was separated by the task, participants can still couple the the self with the morally good, and facilitated the perceptual decision making.
 
-\hypertarget{experiment-5a-eeg-study-1}{%
-\section{Experiment 5a: EEG study 1}\label{experiment-5a-eeg-study-1}}
+\hypertarget{experiment-5-generalization-of-positive-effect}{%
+\section{Experiment 5: Generalization of positive effect}\label{experiment-5-generalization-of-positive-effect}}
 
-Experiment 5a was conducted to study the neural correlates of the positive prioritization effect. The behavioral paradigm is same as experiment 2.
+So far, we have considered the modulation effect of morality and found that the positive moral valence could enhance the perception. However, we still not sure whether this effect was moral specific or reflecting a more general mechanism of effect of positive valence. To test the specificity of morality, we conducted experiment 5, in which three more categories of stimuli were used (people of different attractiveness, scene of diffenent attractivness, and emotional words with different valence). In this study, participants finished 4 session of association task, each with different categories of stimuli.
 
 \hypertarget{method-6}{%
 \subsection{Method}\label{method-6}}
@@ -653,10 +653,35 @@ Experiment 5a was conducted to study the neural correlates of the positive prior
 \hypertarget{participants-8}{%
 \subsubsection{Participants}\label{participants-8}}
 
-25 college students (8 female, age = 22.72 \(\pm\) 2.84) participated the current study, all of them were from Tsinghua Universtiy in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
+43 participant recruited from Tsinghua University university community (21 females; 18 to 29 years of age, mean age = 22.93 ±2.56). All participants were right-handed, and all had normal or corrected-to-normal vision. Informed consent was obtained from all participants prior to the experiment according to procedures approved by the local ethics committee. The data from 5 participants were excluded from analysis, one (male) didn't finished the experiment, and the other four accuracy was less than 60\%. The results for the remaining 38 subjects, with mean age of 22.875 ± 2.59, were included in data analyses.
 
 \hypertarget{experimental-design-2}{%
 \subsubsection{Experimental design}\label{experimental-design-2}}
+
+A 4 × 3 × 2 within-subject design was used. The first independent variable was stimuli categories (morality, atttractiveness of people, attractiveness of scene, and emotional words); the second independent variables is valence (positive, neutral and negative); the third variable was the matching between shape and label (match vs.~mismatch for the association). The task was to learn the association between each geometric shape and the self/other label.
+\#\#\#Stimuli
+4 sets of shapes were included (three circle, three rectangle, three kind of triangle, and three kinds of quadrangle), each set of shape were paired with one category of words, counter-balanced across subjects. Besides the behavioral experiments, participants also finished questionnaires XXXXXXXX.
+
+\hypertarget{procedure-8}{%
+\subsubsection{Procedure}\label{procedure-8}}
+
+Participants finish 4 session of experiment, and each include one experiment as in experiment 1. And the order of each category was randomnized for each participants. Each session started with a practice, and proceed to formal experiment when reached over 60\% accuracy. Each session included 6 blocks of trial, each with 120 trials.
+
+\hypertarget{experiment-6a-eeg-study-1}{%
+\section{Experiment 6a: EEG study 1}\label{experiment-6a-eeg-study-1}}
+
+Experiment 6a was conducted to study the neural correlates of the positive prioritization effect. The behavioral paradigm is same as experiment 2.
+
+\hypertarget{method-7}{%
+\subsection{Method}\label{method-7}}
+
+\hypertarget{participants-9}{%
+\subsubsection{Participants}\label{participants-9}}
+
+25 college students (8 female, age = 22.72 \(\pm\) 2.84) participated the current study, all of them were from Tsinghua Universtiy in 2014. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. No participant was excluded from behavioral analysis.
+
+\hypertarget{experimental-design-3}{%
+\subsubsection{Experimental design}\label{experimental-design-3}}
 
 The experimental design of this experiment is same as experiment 2: a 3 × 2 within-subject design with moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
 
@@ -666,8 +691,8 @@ The experimental design of this experiment is same as experiment 2: a 3 × 2 wit
 Three geometric shapes (triangle, square and circle, each 4.6º × 4.6º of visual angle) were presented at the center of screen for 50 ms after 500ms of fixation (0.8º × 0.8º of visual angle). The association of the three shapes to bad person (\enquote{坏人, HuaiRen}), good person (\enquote{好人, HaoRen}) or ordinary person (\enquote{常人, ChangRen}) was counterbalanced across participants. The words bad person, good person or ordinary person (3.6º × 1.6º) was also displayed at the center fo the screen. Participants had to judge whether the pairings of label and shape matched (e.g., Does the circle represent a bad person?). The experiment was run on a PC using E-prime software (version 2.0). These stimuli were displayed on a 22-in CRT monitor (1024×768 at 100Hz).
 We used backward masking to avoid over-processing of the moral words, in which a scrabmled picture were presented for 900 ms after the label. Also, to avoid the celling effect on accruacy, shapes were presented on a noisy background based on our pilot studies. The noisy images were made by scrambling a picutre of 3/4gray and ¼ white at resoluation of 2 × 2 pixel.
 
-\hypertarget{procedure-8}{%
-\subsubsection{Procedure}\label{procedure-8}}
+\hypertarget{procedure-9}{%
+\subsubsection{Procedure}\label{procedure-9}}
 
 The procedure was similar to Experiment 2. Participants finished 6 blocks of trial, each with 180 trials. In total, participants finished 180 trials for each combination of condition.
 
@@ -692,21 +717,21 @@ The results of reaction times of matchness trials showed similiar pattern as the
 
 We found intercation between Matchness and Valence (\(F(1.96, 47.14) = 21.88\), \(\mathit{MSE} = 434.43\), \(p < .001\), \(\hat{\eta}^2_G = .021\)) and then analyzed the matched trials and mismatched trials separately, as in experiment 2. For matched trials, we found the effect of valence \(F(1.98, 47.44) = 34.68\), \(\mathit{MSE} = 511.80\), \(p < .001\), \(\hat{\eta}^2_G = .080\). For non-matched trials, there was no significant effect of Valence (\(F(1.78, 42.78) = 0.42\), \(\mathit{MSE} = 234.71\), \(p = .638\), \(\hat{\eta}^2_G = .000\)). Post-hoc \emph{t}-tests revealed that shapes associated with Good Person (mean = 550, SE = 13.8) were responded faster than Neutral-Person (501, SE = 14.7), (\emph{t}(24) = -5.171, \emph{p} = 0.0001) and Bad Person (523, SE = 16.3), \emph{t}(24) = -8.137, \emph{p} \textless{} 0.0001)., and Neutral is faster than Bad-Person condition (\emph{t}(32) = -3.282, \emph{p} = 0.0085).
 
-\hypertarget{experiment-5b-eeg-study-2}{%
-\section{Experiment 5b: EEG study 2}\label{experiment-5b-eeg-study-2}}
+\hypertarget{experiment-6b-eeg-study-2}{%
+\section{Experiment 6b: EEG study 2}\label{experiment-6b-eeg-study-2}}
 
-Experiment 5b was conducted to study the neural correlates of the prioritization effect of positive self, i.e., the neural underlying of the behavioral effect found int experiment 3a. However, as in experiment 5a, the procedure of this experiment was modified to adopted to ERP experiment.
+Experiment 6b was conducted to study the neural correlates of the prioritization effect of positive self, i.e., the neural underlying of the behavioral effect found int experiment 3a. However, as in experiment 5a, the procedure of this experiment was modified to adopted to ERP experiment.
 
-\hypertarget{method-7}{%
-\subsection{Method}\label{method-7}}
+\hypertarget{method-8}{%
+\subsection{Method}\label{method-8}}
 
-\hypertarget{participants-9}{%
-\subsubsection{Participants}\label{participants-9}}
+\hypertarget{participants-10}{%
+\subsubsection{Participants}\label{participants-10}}
 
 23 college students (8 female, age = 22.86 \(\pm\) 2.47) participated the current study, all of them were recruited from Tsinghua Universtiy in 2016. Informed consent was obtained from all participants prior to the experiment according to procedures approved by a local ethics committee. For day 1's data, 1 participant was excluded from the current analysis because of lower than 60\% overall accuracy.22 college students (8 female, age = 22.76 \(\pm\) 2.49). For day 2's data, one participant dropp out , and leaving 22 participants (9 female, age = 23.05 \(\pm\) 2.46) in day 2, all of them has overall accuracy higher than 60\%.
 
-\hypertarget{experimental-design-3}{%
-\subsubsection{Experimental design}\label{experimental-design-3}}
+\hypertarget{experimental-design-4}{%
+\subsubsection{Experimental design}\label{experimental-design-4}}
 
 The experimental design of this experiment is same as experiment 3: a 2 × 3 × 2 within-subject design with self-relevance (self-relevant vs.~other-relevant), moral valence (good, neutral and bad associations) and matchness between shape and label (match vs.~mismatch for the personal association) as within-subject variables.
 
@@ -715,10 +740,10 @@ The experimental design of this experiment is same as experiment 3: a 2 × 3 × 
 
 As in experiment 3 a \& 3b, 6 shapes were included (triangle, square, circle, trapezoid, diamond, regular pentagon), as well as 6 labels (good self, neutral self, bad self, good person, bad person, neutral person). To match the concreteness of the label, we asked participant to chosen an unfamiliar name of their own gender to be the stranger.
 
-\hypertarget{procedure-9}{%
-\subsubsection{Procedure}\label{procedure-9}}
+\hypertarget{procedure-10}{%
+\subsubsection{Procedure}\label{procedure-10}}
 
-The procedure was similar to Experiment 2 and 5b. Subjects first learned the associations between labels and shapes and then completed a shape-label matching task. In each trial of the matching task, a fixation were first presented for 500 ms, followed by a 50 ms label; then, a scramled picture presented 900 ms. After the backward mask, the shape were presented on a noisy background for 50ms. Participant have to response in 1000ms after the presentation of the shape, and finnally, a feedback screen was presented for 500 ms (see figure 1). The inter-trial interval (ITI) were randomly varied at the range of 1000 \textasciitilde{} 1400 ms.
+The procedure was similar to Experiment 2 and 6b. Subjects first learned the associations between labels and shapes and then completed a shape-label matching task. In each trial of the matching task, a fixation were first presented for 500 ms, followed by a 50 ms label; then, a scramled picture presented 900 ms. After the backward mask, the shape were presented on a noisy background for 50ms. Participant have to response in 1000ms after the presentation of the shape, and finnally, a feedback screen was presented for 500 ms (see figure 1). The inter-trial interval (ITI) were randomly varied at the range of 1000 \textasciitilde{} 1400 ms.
 
 All the stimuli were presented on a gray background (RGB: 127, 127, 127). E-primed 2.0 was used to present stimuli and collect behavioral results. Data were collected and analyzed when accuracy performance in total reached 60\%.
 
